--- a/app/src/main/res/layout/fragment_print_status.xml
+++ b/app/src/main/res/layout/fragment_print_status.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/print_status_default_margin"
+    android:padding="16dp"
     tools:context=".ui.print_status.PrintStatusFragment">
 
     <TextView
@@ -12,10 +12,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="@dimen/print_status_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/print_status_default_margin"
-        android:paddingBottom="@dimen/print_status_double_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="16dp"
+        android:paddingBottom="32dp"
         android:text="@string/print_status_connected_to_message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,9 +27,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="@dimen/print_status_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:text="@string/print_status_state_label"
         app:layout_constraintEnd_toStartOf="@id/text_state"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,9 +39,9 @@
         android:id="@+id/text_state"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/print_status_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:text="@string/print_status_printer_state_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_state"
@@ -54,9 +54,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="@dimen/print_status_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:text="@string/print_status_message_label"
         app:layout_constraintEnd_toStartOf="@id/text_message"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,9 +66,9 @@
         android:id="@+id/text_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/print_status_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:text="@string/print_status_printing_message_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_message"
@@ -87,9 +87,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="@dimen/print_status_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:text="@string/print_status_file_label"
         app:layout_constraintEnd_toStartOf="@id/text_file"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,9 +99,9 @@
         android:id="@+id/text_file"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/print_status_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:text="@string/print_status_long_file_name_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_file"
@@ -120,9 +120,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="@dimen/print_status_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:text="@string/print_status_time_elapsed_label"
         app:layout_constraintEnd_toStartOf="@id/text_time_since_start"
         app:layout_constraintStart_toStartOf="parent"
@@ -132,9 +132,9 @@
         android:id="@+id/text_time_since_start"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/print_status_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:text="@string/print_status_time_dash"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_time_since_start"
@@ -147,9 +147,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="@dimen/print_status_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:text="@string/print_status_print_time_elapsed_label"
         app:layout_constraintEnd_toStartOf="@id/text_time_spent_printing"
         app:layout_constraintStart_toStartOf="parent"
@@ -159,9 +159,9 @@
         android:id="@+id/text_time_spent_printing"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/print_status_text_size"
-        android:layout_marginStart="@dimen/zero_margin"
-        android:layout_marginTop="@dimen/zero_margin"
+        android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:text="@string/print_status_time_dash"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_time_spent_printing"
