--- a/app/src/main/res/layout/fragment_temperatures.xml
+++ b/app/src/main/res/layout/fragment_temperatures.xml
@@ -10,8 +10,8 @@
         android:id="@+id/editText_plate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/temperatures_default_margin"
-        android:layout_marginTop="@dimen/temperatures_default_margin"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:importantForAutofill="no"
         android:inputType="number"
@@ -23,11 +23,11 @@
         android:id="@+id/hotend_target"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/temperatures_default_margin"
-        android:layout_marginTop="@dimen/temperatures_default_margin"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/temperatures_default_temp_placeholder"
-        android:paddingTop="@dimen/temperatures_top_padding"
-        android:textSize="@dimen/temperatures_placeholder_text_size"
+        android:paddingTop="5dp"
+        android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView9"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,11 +35,11 @@
         android:id="@+id/plate_target"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/temperatures_default_margin"
-        android:layout_marginTop="@dimen/temperatures_default_margin"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/temperatures_default_temp_placeholder"
-        android:paddingTop="@dimen/temperatures_top_padding"
-        android:textSize="@dimen/temperatures_placeholder_text_size"
+        android:paddingTop="5dp"
+        android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toBottomOf="@+id/hotend_target" />
 
@@ -47,10 +47,10 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/temperatures_default_margin"
-        android:layout_marginTop="@dimen/temperatures_default_margin"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/temperatures_target_temp_label"
-        android:textSize="@dimen/temperatures_label_text_size"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/plate_temp"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
@@ -59,10 +59,10 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/temperatures_default_margin"
-        android:layout_marginTop="@dimen/temperatures_default_margin"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/temperatures_target_temp_label"
-        android:textSize="@dimen/temperatures_label_text_size"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/hotend_temp"
         app:layout_constraintTop_toTopOf="parent" />
@@ -71,11 +71,11 @@
         android:id="@+id/plate_temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/temperatures_default_margin"
-        android:layout_marginTop="@dimen/temperatures_default_margin"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/temperatures_default_temp_placeholder"
-        android:paddingTop="@dimen/temperatures_top_padding"
-        android:textSize="@dimen/temperatures_placeholder_text_size"
+        android:paddingTop="5dp"
+        android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/hotend_temp" />
 
@@ -83,10 +83,10 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/temperatures_default_margin"
-        android:layout_marginTop="@dimen/temperatures_default_margin"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/temperatures_heated_plate_label"
-        android:textSize="@dimen/temperatures_label_text_size"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -95,10 +95,10 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/temperatures_default_margin"
-        android:layout_marginTop="@dimen/temperatures_default_margin"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/temperatures_hotend_label"
-        android:textSize="@dimen/temperatures_label_text_size"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -107,11 +107,11 @@
         android:id="@+id/hotend_temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/temperatures_default_margin"
-        android:layout_marginTop="@dimen/temperatures_default_margin"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/temperatures_default_temp_placeholder"
-        android:paddingTop="@dimen/temperatures_top_padding"
-        android:textSize="@dimen/temperatures_placeholder_text_size"
+        android:paddingTop="5dp"
+        android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -119,8 +119,8 @@
         android:id="@+id/editText_hotend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/temperatures_default_margin"
-        android:layout_marginTop="@dimen/temperatures_default_margin"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:importantForAutofill="no"
         android:inputType="number"
@@ -132,8 +132,8 @@
         android:id="@+id/button_set_hotend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/temperatures_default_margin"
-        android:layout_marginTop="@dimen/temperatures_default_margin"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/temperatures_set_hotend_temp_button_label"
         app:layout_constraintStart_toEndOf="@+id/editText_hotend"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -142,8 +142,8 @@
         android:id="@+id/button_set_plate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/temperatures_default_margin"
-        android:layout_marginTop="@dimen/temperatures_default_margin"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/temperatures_set_plate_temp_button_label"
         app:layout_constraintStart_toEndOf="@+id/editText_plate"
         app:layout_constraintTop_toBottomOf="@+id/button_set_hotend" />
