Revert "Refactored string resource names to make them more clear."
This reverts commit 61226461

--- a/app/src/main/res/layout/fragment_print_status.xml
+++ b/app/src/main/res/layout/fragment_print_status.xml
@@ -16,7 +16,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="16dp"
         android:paddingBottom="32dp"
-        android:text="@string/print_status_connected_to_message"
+        android:text="@string/print_status_connected_to"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,7 +30,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/print_status_state_label"
+        android:text="@string/print_status_state"
         app:layout_constraintEnd_toStartOf="@id/text_state"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_host" />
@@ -42,7 +42,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/print_status_printer_state_placeholder"
+        tools:text="Printing"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_state"
         app:layout_constraintTop_toBottomOf="@id/label_host" />
@@ -57,7 +57,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/print_status_message_label"
+        android:text="@string/print_status_message"
         app:layout_constraintEnd_toStartOf="@id/text_message"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_state" />
@@ -69,7 +69,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/print_status_printing_message_placeholder"
+        tools:text="Some message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_message"
         app:layout_constraintTop_toBottomOf="@id/text_state" />
@@ -90,7 +90,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/print_status_file_label"
+        android:text="@string/print_status_file"
         app:layout_constraintEnd_toStartOf="@id/text_file"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/message_barrier" />
@@ -102,7 +102,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/print_status_long_file_name_placeholder"
+        tools:text="bigfile-with-some-very-long-filename-that-spans-multiple-rows.gcode"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_file"
         app:layout_constraintTop_toBottomOf="@id/message_barrier" />
@@ -123,7 +123,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/print_status_time_elapsed_label"
+        android:text="@string/print_status_time_elapsed"
         app:layout_constraintEnd_toStartOf="@id/text_time_since_start"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/file_barrier" />
@@ -135,7 +135,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/print_status_time_dash"
+        android:text="@string/dash"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_time_since_start"
         app:layout_constraintTop_toBottomOf="@id/file_barrier" />
@@ -150,7 +150,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/print_status_print_time_elapsed_label"
+        android:text="@string/print_status_print_time_elapsed"
         app:layout_constraintEnd_toStartOf="@id/text_time_spent_printing"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_time_since_start" />
@@ -162,7 +162,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/print_status_time_dash"
+        android:text="@string/dash"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_time_spent_printing"
         app:layout_constraintTop_toBottomOf="@id/text_time_since_start" />
