--- a/app/src/main/res/layout/fragment_sd_card.xml
+++ b/app/src/main/res/layout/fragment_sd_card.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingBottom="16dp"
-        android:text="@string/print_status_file_label"
+        android:text="@string/print_status_file"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@id/spinner_files"
@@ -38,7 +38,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/sd_card_file_modified_label"
+        android:text="@string/file_modified"
         android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="2"
         app:layout_constraintEnd_toStartOf="@id/text_modified"
@@ -52,7 +52,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/sd_card_modified_time_placeholder"
+        android:text="@string/modified_time_placeholder"
         android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/sd_card_file_size_label"
+        android:text="@string/file_size"
         android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="2"
         app:layout_constraintEnd_toStartOf="@id/text_size"
@@ -81,7 +81,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/sd_card_file_size_placeholder"
+        android:text="@string/file_size_placeholder"
         android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +96,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/sd_card_estimated_time_label"
+        android:text="@string/estimated_time"
         android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="2"
         app:layout_constraintEnd_toStartOf="@id/text_estimated_time"
@@ -110,7 +110,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/sd_card_estimated_time_placeholder"
+        android:text="@string/estimated_time_placeholder"
         android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,7 +125,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/sd_card_slicer_label"
+        android:text="@string/slicer"
         android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="2"
         app:layout_constraintEnd_toStartOf="@id/text_slicer"
@@ -139,7 +139,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/sd_card_slicer_name_placeholder"
+        android:text="@string/slicer_name_placeholder"
         android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -154,7 +154,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/sd_card_slicer_version_label"
+        android:text="@string/slicer_version"
         android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="2"
         app:layout_constraintEnd_toStartOf="@id/text_slicer_version"
@@ -168,7 +168,7 @@
         android:textSize="20sp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/sd_card_slicer_version_placeholder"
+        android:text="@string/slicer_version_placeholder"
         android:paddingBottom="16dp"
         app:layout_constraintHorizontal_weight="3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -180,7 +180,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="@string/sd_card_print_button_label"
+        android:text="@string/print_file"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/label_slicer_version"
