--- a/app/src/main/res/layout/fragment_temperatures.xml
+++ b/app/src/main/res/layout/fragment_temperatures.xml
@@ -15,7 +15,7 @@
         android:ems="10"
         android:importantForAutofill="no"
         android:inputType="number"
-        android:text="@string/temperatures_zero_temp_placeholder"
+        android:text="@string/zero"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_hotend" />
 
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/temperatures_default_temp_placeholder"
+        android:text="@string/default_temp"
         android:paddingTop="5dp"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView9"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/temperatures_default_temp_placeholder"
+        android:text="@string/default_temp"
         android:paddingTop="5dp"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView10"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/temperatures_target_temp_label"
+        android:text="@string/temp_target"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/plate_temp"
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/temperatures_target_temp_label"
+        android:text="@string/temp_target"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/hotend_temp"
@@ -73,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/temperatures_default_temp_placeholder"
+        android:text="@string/default_temp"
         android:paddingTop="5dp"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView6"
@@ -85,7 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/temperatures_heated_plate_label"
+        android:text="@string/heated_plate"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/temperatures_hotend_label"
+        android:text="@string/hotend"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +109,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/temperatures_default_temp_placeholder"
+        android:text="@string/default_temp"
         android:paddingTop="5dp"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -124,7 +124,7 @@
         android:ems="10"
         android:importantForAutofill="no"
         android:inputType="number"
-        android:text="@string/temperatures_zero_temp_placeholder"
+        android:text="@string/zero"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -134,7 +134,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/temperatures_set_hotend_temp_button_label"
+        android:text="@string/set_hotend_temp"
         app:layout_constraintStart_toEndOf="@+id/editText_hotend"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -144,7 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/temperatures_set_plate_temp_button_label"
+        android:text="@string/set_plate_temp"
         app:layout_constraintStart_toEndOf="@+id/editText_plate"
         app:layout_constraintTop_toBottomOf="@+id/button_set_hotend" />
 </androidx.constraintlayout.widget.ConstraintLayout>
