--- a/app/src/main/res/layout/fragment_sd_card.xml
+++ b/app/src/main/res/layout/fragment_sd_card.xml
@@ -186,4 +186,13 @@
         app:layout_constraintTop_toBottomOf="@+id/label_slicer_version"
         app:layout_constraintVertical_bias="0.119" />
 
+<!--    <Button-->
+<!--        android:id="@+id/deleteButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/clear_metadata"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/printButton"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/printButton" />-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
